# router/router.go
@@ -19,6 +19,7 @@ func Router() *gin.Engine {
 	r.POST("/user/insert", service.CreateUser)
 	r.DELETE("/user/delete", service.DeleteUser)
 	r.PUT("/user/update", service.UpdateUser)
+	r.POST("/user/login", service.Login)
 
 	return r
 }
